--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <html lang="en" >
   <head>
     <meta charset="UTF-8">
-    <title>Sample Web</title>
+    <title>Link Ministries</title>
+    <link rel="icon" href="logo-removebg-preview (2).png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
