--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="row max">
         <div class="col-sm-offset-2 col-sm-8 text-center">
           <div class="desc">
-            <p>Event announcment</p>
+            <p>--- Event Announcment Here ---</p>
           </div>
         </div>
       </div>
