--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">Services</a></li>
+            <li><a href="#about">Sunday Services</a></li>
             <li><a href="#portfolio">Event</a></li>
             <li><a href="#contact">Contacts</a></li>
           </ul>
@@ -92,7 +92,7 @@
         <div class="col-md-offset-3 col-md-6 text-center">
           <div>
             <span class="line about"></span>
-            <span class="section-title about">Church Services</span>
+            <span class="section-title about">Sunday Services</span>
             <span class="line about"></span>
           </div>
         </div>
