--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#about">Sunday Services</a></li>
-            <li><a href="#portfolio">Event</a></li>
+            <li><a href="#portfolio">Announcement</a></li>
             <li><a href="#contact">Contacts</a></li>
           </ul>
 
@@ -140,7 +140,7 @@
         <div class="col-md-offset-3 col-md-6 text-center">
           <div>
             <span class="line portfolio"></span>
-            <span class="section-title portfolio">Event</span>
+            <span class="section-title portfolio">Announcement</span>
             <span class="line portfolio"></span>
           </div>
         </div>
